# AI-Resume-Builder

./: Instruction to RUN.txt  README.md  app.py  pyproject.toml  test_pipeline.py
samples/: sample_plain.txt  sample_structured.json
src/resume_ai/: __init__.py  cli.py  config.py  models.py  pipeline.py  prompt_library.py
src/resume_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/resume_ai/providers/: base.py  groq_provider.py  openai_provider.py
src/resume_ai/renderers/: docx_renderer.py  pdf_renderer.py
src/resume_ai/templating/templates/: __init__.py  corporate.html  minimal.html
